fixed width issue  on mobile

--- a/style.css
+++ b/style.css
@@ -174,7 +174,16 @@ h6 { font-size: 16px;}
   .main-container{
     width: 95%;
   }
+}
 
+@media screen and (max-width: 800px) {
+  .intro-wrapper{
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'nav-wrapper'
+      'left-column'
+      'right-column';
+  }
 }
 
 .center{
